doc: more javadocs
one reorganization from updated linting