@@ -5,6 +5,7 @@ import com.google.gson.reflect.TypeToken;
 import java.util.ArrayList;
 import java.util.Map;
 
+/** Data model for user information directly mimicking the Firestore model form. */
 public class User {
   public String id;
 
@@ -21,25 +22,13 @@ public class User {
   public Previous previous;
   public Footer footer;
 
-  public static class Channel {
-    public String channelId;
-  }
-
-  public static class Previous {
-    // This `id` is sometimes a string and sometimes a number. It is totally useless data.
-    @Deprecated public Object id;
-    public String lid;
-    public ArrayList<String> list;
-    public long published;
-    public String uri;
-  }
-
-  public static class Footer {
-    public String icon;
-    public String text;
-  }
-
-  public ArrayList<String> getChannelList() throws Exception {
+  /**
+   * Build a predictable ArrayList of channelIds strings from chaotic data in this model.
+   *
+   * @return A list of channelIds as strings. The contents are numeric but we don't use these for
+   *     calculations.
+   */
+  public ArrayList<String> getChannelList() {
     ArrayList<String> channelListResults = new ArrayList<String>();
     if (this.channelList == null) {
       return channelListResults;
@@ -52,17 +41,50 @@ public class User {
     return channelListResults;
   }
 
+  /**
+   * Check both the `previous.list` and the `previous.lid` preferring the last item from
+   * `previous.list` but falling back as needed.
+   *
+   * @return The LetterboxdId of the most recent previous entry.
+   */
   public String getMostRecentPrevious() {
     if (previous.list == null || previous.list.isEmpty()) {
       return previous.lid;
     }
 
-    return previous.list.get(previous.list.size() - 1);
+    return previous.list.getLast();
   }
 
+  /**
+   * Creates the user data as generic object matching the same structure so that Firestore can
+   * process it natively.
+   *
+   * @return a {@link Map} containing the data outside the model
+   */
   public Map<String, Object> toMap() {
     Gson gson = new Gson();
     String json = gson.toJson(this);
     return gson.fromJson(json, new TypeToken<Map<String, Object>>() {}.getType());
+  }
+
+  /** Storage object for how channelIds are stored in Firestore. */
+  public static class Channel {
+    public String channelId;
+  }
+
+  /** Storage object for previous entries for this user. */
+  public static class Previous {
+    // This `id` is sometimes a string and sometimes a number. It is totally useless data.
+    @Deprecated public Object id;
+    public String lid;
+    public ArrayList<String> list;
+    public long published;
+    public String uri;
+  }
+
+  /** Storage object for footer that is included with users posts. */
+  public static class Footer {
+    public String icon;
+    public String text;
   }
 }
